Experimenting with multimodule stuff

--- a/resources/application.conf
+++ b/resources/application.conf
@@ -6,6 +6,7 @@ ktor {
     application {
         modules = [
             hu.pappbence.ApplicationKt.module
+            hu.pappbence.modules.TestModuleKt.testModule
         ]
     }
 }
