Extracted functionality into service layer

--- a/resources/application.conf
+++ b/resources/application.conf
@@ -7,6 +7,7 @@ ktor {
         modules = [
             hu.pappbence.ApplicationKt.module
             hu.pappbence.modules.TestModuleKt.testModule
+            hu.pappbence.modules.OwnersModuleKt.ownersModule
         ]
     }
 }
