--- a/build.gradle
+++ b/build.gradle
@@ -5,11 +5,13 @@ buildscript {
     
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.koin:koin-gradle-plugin:$koin_version"
     }
 }
 
 apply plugin: 'kotlin'
 apply plugin: 'application'
+apply plugin: 'koin'
 
 group 'hu.pappbence'
 version '0.0.1'
@@ -49,4 +51,7 @@ dependencies {
     compile "org.jetbrains.exposed:exposed-dao:$exposed_version"
     compile "org.jetbrains.exposed:exposed-jdbc:$exposed_version"
     compile "org.xerial:sqlite-jdbc:3.30.1"
+
+    // Koin for Kotlin
+    implementation "org.koin:koin-ktor:$koin_version"
 }
