Added pets endpoint with some functionality

--- a/resources/application.conf
+++ b/resources/application.conf
@@ -8,6 +8,7 @@ ktor {
             hu.pappbence.ApplicationKt.module
             hu.pappbence.modules.TestModuleKt.testModule
             hu.pappbence.modules.OwnersModuleKt.ownersModule
+            hu.pappbence.modules.PetsModuleKt.petsModule
         ]
     }
 }
