Added appointments and appointment registration basie stuff

--- a/resources/application.conf
+++ b/resources/application.conf
@@ -9,6 +9,7 @@ ktor {
             hu.pappbence.modules.TestModuleKt.testModule
             hu.pappbence.modules.OwnersModuleKt.ownersModule
             hu.pappbence.modules.PetsModuleKt.petsModule
+            hu.pappbence.modules.AppointmentsModuleKt.appointmentsModule
         ]
     }
 }
